samples/_failures_safe/1761200049_846c51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0e019a5.c: In function ‘update_stats’:
./samples/SAFE/__tmp_c0e019a5.c:111:9: error: expected expression at end of input
  111 |         analyzer->stats.latest_timestamp[sizeof(
      |         ^~~~~~~~
./samples/SAFE/__tmp_c0e019a5.c:111:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c0e019a5.c:111:9: error: expected declaration or statement at end of input
